# TestRepo

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: sample_config.yaml
data/: Question Set Changes Montpellier to Willow.xlsx  sample_doc.md
ragtool/: __init__.py  cli.py  config.py  evaluate.py  index.py  ingest.py  pipeline.py  retrieval.py  seed.py  training.py
